# sephi

./: .gitignore  CMakeLists.txt  CMakeSettings.json  readme.md
cmake/: flatbuffers_schema_to_cpp.cmake
include/sephi/ipc/: creation_tags.h
include/sephi/ipc/container/: string.h  vector.h
include/sephi/ipc/mq/: message_queue.h
include/sephi/ipc/mq/boost/: message_queue_mod.hpp
include/sephi/ipc/shm/: exception.h  shared_memory.h  types.h
include/sephi/ipc/sync/: condition.h  event.h  mutex.h  named_condition.h  named_event.h  named_mutex.h  scoped_lock.h  types.h
include/sephi/net/serial/: serial.h  serial_params.h
include/sephi/net/tcp/client/: client.h
include/sephi/net/tcp/server/: server.h  session.h
include/sephi/net/types/: chunk.h  message.h  remote.h  types.h
include/sephi/net/udp/: udp.h
include/sephi/sync/: event.h
include/sephi/util/: random_string.h
src/: CMakeLists.txt
src/ipc/mq/: message_queue.cpp
src/ipc/shm/: shared_memory.cpp
src/ipc/sync/: event.cpp  named_event.cpp
src/net/serial/: serial.cpp  serial_params.cpp
src/net/tcp/client/: client.cpp
src/net/tcp/server/: server.cpp  session.cpp
src/net/types/: chunk.cpp  message.cpp
src/net/udp/: udp.cpp
src/sync/: event.cpp
src/util/: random_string.cpp
test/: CMakeLists.txt
test/ipc/mq/: message_queue_test.cpp
test/ipc/shm/: shared_memory_test.cpp
test/ipc/sync/: condition_test.cpp  event_test.cpp  mutex_test.cpp
test/net/chunk/: chunk_test.cpp
test/net/message/: message_test.cpp
test/net/serial/: config.yaml  serial.h  serial_test.cpp
test/net/tcp/: client.cpp  client.h  server.cpp  server.h  tcp_test.cpp
test/net/udp/: udp.h  udp_test.cpp
test/sync/: event_test.cpp
